--- a/beadando_deCasteljau/GraphicsDLL/GraphicsDLL.csproj
+++ b/beadando_deCasteljau/GraphicsDLL/GraphicsDLL.csproj
@@ -42,12 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="factory\StrategyFactory.cs" />
+    <Compile Include="factory\DeCasteljauFactory.cs" />
     <Compile Include="strategy\DeCasteljauStrategy.cs" />
+    <Compile Include="strategy\RecursiveSingleDeCasteljau.cs" />
     <Compile Include="utilities\ExtendedGraphics.cs" />
     <Compile Include="utilities\ExtendedPointF.cs" />
     <Compile Include="strategy\IterativeParallelDeCasteljau.cs" />
-    <Compile Include="strategy\IterativeSingleThreadedDeCasteljau.cs" />
+    <Compile Include="strategy\IterativeSingleDeCasteljau.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="strategy\RecursiveParallelDeCasteljau.cs" />
     <Compile Include="utilities\Vector2.cs" />
